// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders block button type correctly 1`] = `
<button
  className="css-102sjd6"
>
  A block button!
</button>
`;

exports[`Button renders default button type correctly 1`] = `
<button
  className="css-1qwxmbs"
>
  A button!
</button>
`;

exports[`Button renders default button type correctly 2`] = `
<button
  className="css-177boov"
>
  A button!
</button>
`;

exports[`Button renders default button type correctly 3`] = `
<button
  className="css-on4dm1"
>
  A button!
</button>
`;

exports[`Button renders huge button type correctly 1`] = `
<button
  className="css-18ycrc6"
>
  A huge button!
</button>
`;

exports[`Button renders native button correctly 1`] = `
<button
  className="css-1qwxmbs"
>
  A button!
</button>
`;

exports[`ButtonLink renders link button correctly 1`] = `
<a
  className="css-1qwxmbs"
  href="/home"
  onClick={[Function]}
  onMouseEnter={[Function]}
>
  A link button!
</a>
`;
